# aloyo

./: .gitignore  CLAUDE.md  bl10.txt  bl11.txt  bl12.txt  bl13.txt  bl5.txt  bl6.txt  bl7.txt  bl8.txt  bl9.txt  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  gradlew  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/yolov8/: config.json
app/src/main/java/com/aloyo/app/: ALoyoApp.kt  InferencePipeline.kt  MainActivity.kt  MediaProjectionAuthActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
common/: build.gradle.kts
common/src/main/java/com/aloyo/common/: CaptureRegion.kt  Detection.kt  ICaptureSource.kt  IInferenceEngine.kt  ILogger.kt  IModelManager.kt  IOverlayRenderer.kt  ModelConfig.kt  PerformanceMetrics.kt
core-capture/: build.gradle.kts
core-capture/src/main/: AndroidManifest.xml
core-capture/src/main/java/com/aloyo/capture/: CaptureManager.kt  ScreenCaptureService.kt
core-inference/: build.gradle.kts
core-inference/src/main/java/com/aloyo/inference/: NcnnInferenceEngine.kt  YoloDecoder.kt  YoloPostProcessor.kt  YoloPreProcessor.kt
core-inference/src/main/jni/: CMakeLists.txt  aloyo_inference_jni.cpp
core-logger/: build.gradle.kts
core-logger/src/main/java/com/aloyo/logger/: ALoyoLogger.kt
core-model/: build.gradle.kts
core-model/src/main/java/com/aloyo/model/: ModelManager.kt
core-overlay/: build.gradle.kts
core-overlay/src/main/: AndroidManifest.xml
core-overlay/src/main/java/com/aloyo/overlay/: DetectionOverlayView.kt  OverlayControlPanel.kt  OverlayManager.kt
docs/superpowers/specs/: 2026-04-25-aloyo-development-experience.md  2026-04-25-aloyo-yolo-inference-design.md
